sgd/reproduction/playground/objects/SVMXC__Service_Group_Skills__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Group enables definition of your entire service organization. Service group definition includes details of group members, products in which the group specializes in, the skills available in the group, typical service delivery costs as well as geographies covered by the group.</description>
    <fields>
        <fullName>SVMXC__Availability_End_Date__c</fullName>
        <description>Date up to which this skill is available in this group</description>
        <inlineHelpText>Date up to which this skill is available in this group</inlineHelpText>
        <label>Availability End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Availability_Start_Date__c</fullName>
        <description>Date from which this skill is available in this group</description>
        <inlineHelpText>Date from which this skill is available in this group</inlineHelpText>
        <label>Availability Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service group member. Is a lookup to an existing service group member in ServiceMax</description>
        <inlineHelpText>Name of the service group member. Is a lookup to an existing service group member in ServiceMax</inlineHelpText>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Expertise</relationshipLabel>
        <relationshipName>Service_Group_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Applicable__c</fullName>
        <formula>IF( ISNULL( SVMXC__Availability_Start_Date__c ) , IF( ISNULL( SVMXC__Availability_End_Date__c ), &apos;TRUE&apos;, IF( SVMXC__Availability_End_Date__c &gt;= TODAY(), &apos;TRUE&apos;, &apos;FALSE&apos;)), IF(ISNULL(SVMXC__Availability_End_Date__c), IF( SVMXC__Availability_Start_Date__c &lt;= TODAY() , &apos;TRUE&apos;, &apos;FALSE&apos;), IF( AND(SVMXC__Availability_End_Date__c &gt;= TODAY(), SVMXC__Availability_Start_Date__c &lt;= TODAY()), &apos;TRUE&apos;, &apos;FALSE&apos;)))</formula>
        <label>Is Applicable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Group__c</fullName>
        <description>Name of the service group. Is a lookup to an existing service group in ServiceMax</description>
        <inlineHelpText>Name of the service group. Is a lookup to an existing service group in ServiceMax</inlineHelpText>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Expertise</relationshipLabel>
        <relationshipName>Service_Group_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Level__c</fullName>
        <description>Proficiency level at which this skill is available. See skill definition for low, medium and high benchmarks of this skill.</description>
        <inlineHelpText>Proficiency level at which this skill is available. See skill definition for low, medium and high benchmarks of this skill.</inlineHelpText>
        <label>Skill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the skill. Is a lookup to an existing skill record in ServiceMax</description>
        <inlineHelpText>Name of the skill. Is a lookup to an existing skill record in ServiceMax</inlineHelpText>
        <label>Skill</label>
        <referenceTo>SVMXC__Skill__c</referenceTo>
        <relationshipName>Service_Group_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expertise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Group_Member__c</columns>
        <columns>SVMXC__Service_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>SGSK-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expertise</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Check_Skill_Level</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
 OR( 
   SVMXC__Skill_Level__c &lt;  SVMXC__Skill__r.SVMXC__Skill_Level_Low__c,
   SVMXC__Skill_Level__c &gt;   SVMXC__Skill__r.SVMXC__Skill_Level_High__c 
), true, false)</errorConditionFormula>
        <errorDisplayField>SVMXC__Skill_Level__c</errorDisplayField>
        <errorMessage>技能レベルをスキル・資格での範囲内に設定ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__Expertise_Start_End_Date</fullName>
        <active>true</active>
        <description>Expertise should have valid start and end dates</description>
        <errorConditionFormula>SVMXC__Availability_End_Date__c &lt;  SVMXC__Availability_Start_Date__c</errorConditionFormula>
        <errorMessage>End date should be greater than or equal to Start date.</errorMessage>
    </validationRules>
</CustomObject>